// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareMenu renders (user not signed in) 1`] = `
<DocumentFragment>
  <div
    class="menu share-menu"
  >
    <div
      class="share-sign-in-promo"
    >
      <span>
        <a
          href="#"
        >
          <span>
            Sign in
          </span>
        </a>
         for nicer links to your streets and your personal street gallery
      </span>
    </div>
    <div
      class="share-via-link-container"
    >
      <span>
        Copy and paste this link to share:
      </span>
      <input
        class="share-via-link"
        readonly=""
        spellcheck="false"
        type="text"
        value="http://localhost/"
      />
    </div>
    <a
      class="share-via-twitter"
      href="https://twitter.com/intent/tweet?text=Check%20out%20this%20street%20on%20Streetmix!&url=http%3A%2F%2Flocalhost%2F"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa fa-twitter"
      />
      <span>
        Share using Twitter
      </span>
    </a>
    <a
      class="share-via-facebook"
      href="https://www.facebook.com/dialog/feed?app_id=undefined&redirect_uri=http%3A%2F%2Flocalhost%2F&link=http%3A%2F%2Flocalhost%2F&name=Unnamed%20St%20%E2%80%93%20Streetmix&description=Check%20out%20this%20street%20on%20Streetmix!"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa fa-facebook-square"
      />
      <span>
        Share using Facebook
      </span>
    </a>
    <a
      href="#"
    >
      <span>
        Print…
      </span>
    </a>
    <a
      href="#"
      id="save-as-image"
    >
      <span>
        Save as image…
      </span>
      <span
        class="menu-item-subtext"
      >
        <span>
          For including in a report, blog, etc.
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ShareMenu renders (user signed in) 1`] = `
<DocumentFragment>
  <div
    class="menu share-menu"
  >
    <div
      class="share-via-link-container"
    >
      <span>
        Copy and paste this link to share:
      </span>
      <input
        class="share-via-link"
        readonly=""
        spellcheck="false"
        type="text"
        value="http://localhost/"
      />
    </div>
    <a
      class="share-via-twitter"
      href="https://twitter.com/intent/tweet?text=Check%20out%20this%20street%20on%20Streetmix!&url=http%3A%2F%2Flocalhost%2F"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa fa-twitter"
      />
      <span>
        Share using Twitter
      </span>
    </a>
    <a
      class="share-via-facebook"
      href="https://www.facebook.com/dialog/feed?app_id=undefined&redirect_uri=http%3A%2F%2Flocalhost%2F&link=http%3A%2F%2Flocalhost%2F&name=Unnamed%20St%20%E2%80%93%20Streetmix&description=Check%20out%20this%20street%20on%20Streetmix!"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="svg-inline--fa fa-facebook-square"
      />
      <span>
        Share using Facebook
      </span>
    </a>
    <a
      href="#"
    >
      <span>
        Print…
      </span>
    </a>
    <a
      href="#"
      id="save-as-image"
    >
      <span>
        Save as image…
      </span>
      <span
        class="menu-item-subtext"
      >
        <span>
          For including in a report, blog, etc.
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;
